# ash-rl-mlx

./: .gitignore  README.md  aggregate_terminal_bench.py  ash_rl_colab.ipynb  dashboard.py  deep_search.py  download_bash_data.py  download_dataset.py  generate_notebook.py  main.py  pyproject.toml  terminal_bench.py  terminal_bench_full.json  test_eval.py  test_gen.py  test_model.py
